gcc/testsuite/rust/compile/import_in_type_ns1.rs
#![feature(no_core)]
#![no_core]

pub mod foo {
    pub mod bar {
        pub struct Q;
    }
}

use foo::bar; // { dg-error ".bar. defined multiple times" }

struct bar;
